update spec and fix service

--- a/spec/spec/spec.v1.yaml
+++ b/spec/spec/spec.v1.yaml
@@ -42,7 +42,7 @@ paths:
     get:
       description: |
         Lists all services.
-      operationId: listservices
+      operationId: listServices
       responses:
         "200":
           content:
@@ -1328,10 +1328,6 @@ components:
           allOf:
           - $ref: '#/components/schemas/KSUID'
           description: The actor ID this API key is associated with
-        serviceId:
-          allOf:
-          - $ref: '#/components/schemas/KSUID'
-          description: The service ID this API key belongs to
         name:
           description: "Name of the API key"
           maxLength: 16
