--- a/spec/spec/spec.v1.yaml
+++ b/spec/spec/spec.v1.yaml
@@ -220,194 +220,6 @@ paths:
       tags:
       - Services
 
-  /services/{serviceId}/blocks:
-    get:
-      description: |
-         Lists all Blocked Ip addresses for a specified service.
-      operationId: listBlockedIpAddresses
-      parameters:
-      - description: The unique identifier of the service whose blocked Ip addresses are to be
-          listed.
-        explode: false
-        in: path
-        name: serviceId
-        required: true
-        schema:
-          type: string
-        style: simple
-      responses:
-        "200":
-          content:
-            service/json:
-              schema:
-                items:
-                  $ref: '#/components/schemas/BlockedIpAddress'
-                type: array
-          description: Successfully retrieved a list of blocked IP addresses for the service.
-        "404":
-          content:
-            service/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-          description: "The specified service was not found, indicating an invalid\
-            \ service ID."
-        "500":
-          content:
-            service/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-          description: "A server error occurred, preventing the retrieval of blocked IP addresses."
-      security:
-      - BearerAuth: []
-      summary: List all blocked IP addresses for a service
-      tags:
-      - Blocked Ip Addresses
-    post:
-      description: |
-        Block a new IP address with given parameters.
-      operationId: blockIpAddress
-      parameters:
-      - description: The identifier of the service for which the Ip address is being
-          blocked.
-        explode: false
-        in: path
-        name: serviceId
-        required: true
-        schema:
-          type: string
-        style: simple
-      requestBody:
-        content:
-          service/json:
-            schema:
-              $ref: '#/components/schemas/BlockedIpAddressInput'
-        description: Contains the scope IP address block information.
-        required: true
-      responses:
-        "201":
-          content:
-            service/json:
-              schema:
-                $ref: '#/components/schemas/BlockedIpAddress'
-          description: New IP address block created successfully. The block details are included
-            in the response.
-        "400":
-          content:
-            service/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-          description: "Invalid request, such as missing required fields or invalid\
-            \ scope specifications."
-        "404":
-          content:
-            service/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-          description: The specified service was not found.
-        "500":
-          content:
-            service/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-          description: "A server error occurred, preventing the generation of the\
-            \ block."
-      security:
-      - BearerAuth: []
-      summary: Generate a new IP address blocked for a service
-      tags:
-      - Blocked Ip Addresses
-  /services/{serviceId}/blocks/{ipAddress}:
-    delete:
-      description: |
-        Removes the block on the specified Ip address.
-      operationId: unblockIpAddress
-      parameters:
-      - description: The unique identifier of the service from which the block will
-          be deleted.
-        explode: false
-        in: path
-        name: serviceId
-        required: true
-        schema:
-          type: string
-        style: simple
-      - description: The unique identifier of the Ip address to be unblocked.
-        explode: false
-        in: path
-        name: ipAddress
-        required: true
-        schema:
-          type: string
-        style: simple
-      responses:
-        "204":
-          description: "The IP address block was removed successfully, no content returned."
-        "404":
-          content:
-            service/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-          description: Either the IP address or the service was not found.
-        "500":
-          content:
-            service/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-          description: "A server error occurred, preventing the deletion of the IP address\
-            \ block."
-      security:
-      - BearerAuth: []
-      summary: Remove a specific IP address block
-      tags:
-      - Blocked Ip Addresses
-    get:
-      description: |
-        Retrieves the specified IP address block.
-      operationId: getBlockedIpAddress
-      parameters:
-      - description: The unique identifier of the service associated with the IP address
-          block.
-        explode: false
-        in: path
-        name: serviceId
-        required: true
-        schema:
-          type: string
-        style: simple
-      - description: The unique identifier of the Ip address block to be retrieved.
-        explode: false
-        in: path
-        name: ipAddress
-        required: true
-        schema:
-          type: string
-        style: simple
-      responses:
-        "200":
-          content:
-            service/json:
-              schema:
-                $ref: '#/components/schemas/BlockedIpAddress'
-          description: Detailed information about the IP address block retrieved successfully.
-        "404":
-          content:
-            service/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-          description: Either the specified IP address block or the service was not found.
-        "500":
-          content:
-            service/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-          description: "A server error occurred, preventing the retrieval of the\
-            \ IP address block."
-      security:
-      - BearerAuth: []
-      summary: Retrieve an Ip address block
-      tags:
-      - Blocked Ip Addresses
-
   /services/{serviceId}/keys:
     get:
       description: |
@@ -710,7 +522,7 @@ paths:
       tags:
       - Actors
 
-  /services/{serviceId}/actors/{actorId}:
+  /services/{serviceId}/actors/{actorExternalId}:
     get:
       tags:
         - Actors
@@ -724,7 +536,7 @@ paths:
           description: The unique ID of the service
           schema:
             type: string
-        - name: actorId
+        - name: actorExternalId
           in: path
           required: true
           description: The unique ID of the pricing tier
@@ -748,7 +560,7 @@ paths:
           description: The unique ID of the service
           schema:
             type: string
-        - name: actorId
+        - name: actorExternalId
           in: path
           required: true
           description: The unique ID of the pricing tier
@@ -777,7 +589,7 @@ paths:
           description: The unique ID of the service
           schema:
             type: string
-        - name: actorId
+        - name: actorExternalId
           in: path
           required: true
           description: The unique ID of the actor
@@ -986,16 +798,6 @@ paths:
                     type: string
                   remaining:
                         type: integer 
-                  rateLimit:
-                    type: object
-                    properties:
-                      reset:
-                        type: integer
-                      limit:
-                        type:
-                          integer
-                      remaining:
-                        type: integer
         401:
           description: Unauthorized request
       tags:
@@ -1003,30 +805,6 @@ paths:
 
 components:
   schemas:
-    BlockedIpAddress:
-      description: "Information of blocked IP address and reason"
-      type: object
-      properties:
-        ipAddress:
-          type: string
-          description: "IP address to be blocked"
-        reason:
-          type: string
-          description: "Reason why the IP address was blocked"
-        createdAt:
-          description: "The date when the block was created"
-          type: string
-          format: date-time
-    BlockedIpAddressInput:
-      description: "Information of blocked IP address and reason"
-      type: object
-      properties:
-        ipAddress:
-          type: string
-          description: "IP address to be blocked"
-        reason:
-          type: string
-          description: "Reason why the IP address was blocked"
     BillingInfo:
       description: "Billing information, including pricing tier and trial expiration date"
       type: object
@@ -1060,10 +838,6 @@ components:
         defaultMonthlyRequestLimit:
           description: "The maximum number of API requests allowed per month"
           type: integer
-        defaultRateLimit:
-          description: "Rate limit configuration for the tier (requests per second or minute)"
-          allOf:
-            - $ref: '#/components/schemas/RateLimit'
         overagePrice:
           description: "The price per extra request beyond the monthly limit"
           type: number
@@ -1078,44 +852,10 @@ components:
         defaultMonthlyRequestLimit:
           description: "The maximum number of API requests allowed per month"
           type: integer
-        defaultRateLimit:
-          description: "Rate limit configuration for the tier (requests per second or minute)"
-          allOf:
-            - $ref: '#/components/schemas/RateLimit'
         overagePrice:
           description: "The price per extra request beyond the monthly limit"
           type: number
           format: float
-    RateLimit:
-      description: "Rate limit configuration for this API key"
-      type: object
-      properties:
-        name:
-          description: "The name of the rate limit"
-          maxLength: 16
-          minLength: 1
-          type: string
-        limit:
-          description: "The number of allowed requests in the defined time window"
-          type: integer
-        duration:
-          description: "Time window for the rate limit, specified in ISO duration format (e.g., '1h', '30m')"
-          type: string
-    RateLimitInput:
-      description: "Rate limit configuration for this API key"
-      type: object
-      properties:
-        name:
-          description: "The name of the rate limit"
-          maxLength: 16
-          minLength: 1
-          type: string
-        limit:
-          description: "The number of allowed requests in the defined time window"
-          type: integer
-        window:
-          description: "Time window for the rate limit, specified in ISO duration format (e.g., '1h', '30m')"
-          type: string
     KSUID:
       description: A K-sortable unique identifier (KSUID)
       maxLength: 27
@@ -1155,11 +895,6 @@ components:
           maxLength: 30
           minLength: 1
           type: string
-        blockedIpAddresses:
-          description: List of blocked IP addresses
-          type: array
-          items:
-            type: string
         description:
           description: A brief description of the service
           maxLength: 180
@@ -1189,11 +924,6 @@ components:
           maxLength: 180
           minLength: 1
           type: string
-        blockedIpAddresses:
-          description: List of blocked IP addresses
-          type: array
-          items:
-            type: string
       required:
       - name
       type: object
@@ -1201,7 +931,6 @@ components:
       example:
         id: ""
         externalId: ""
-        rateLimit: ""
       properties:
         id:
             allOf:
@@ -1222,7 +951,6 @@ components:
     ActorInput:
       example:
         externalId: ""
-        rateLimit: ""
       properties:
         externalId:
           allOf:
@@ -1245,12 +973,9 @@ components:
           - read
           - write
         serviceId: "serviceId123"
-        actorId: "actorId456"
+        actorExternalId: "actorExternalId1234243"
         updatedAt: 2023-09-14T12:00:00.000Z
         name: "Example API Key"
-        rateLimit: 
-          type: "basic"
-          maxRequestsPerHour: 1000
         billingInfo:
           tier: "pro"
           trialExpiry: 2023-10-14T12:00:00.000Z
@@ -1274,11 +999,7 @@ components:
           items:
             type: string
           type: array
-        rateLimit:
-          allOf:
-            - $ref: '#/components/schemas/RateLimit'
-          description: "Rate limit configuration for this API key"
-        actorId:
+        actorExternalId:
           allOf:
           - $ref: '#/components/schemas/KSUID'
           description: The actor ID this API key is associated with
@@ -1299,10 +1020,6 @@ components:
           maxLength: 16
           minLength: 1
           type: string
-        billingInfo:
-          allOf:
-          - $ref: '#/components/schemas/BillingInfo'
-          description: "Billing information, including pricing tier and trial expiration date"
         expiry:
           description: "Optional expiration date for the API key"
           format: date-time
@@ -1320,11 +1037,7 @@ components:
           items:
             type: string
           type: array
-        rateLimit:
-          allOf:
-            - $ref: '#/components/schemas/RateLimit'
-          description: "Rate limit configuration for this API key"
-        actorId:
+        actorExternalId:
           allOf:
           - $ref: '#/components/schemas/KSUID'
           description: The actor ID this API key is associated with
@@ -1339,7 +1052,7 @@ components:
           type: string
       required:
       - name
-      - actorId
+      - actorExternalId
       - serviceId
       type: object
     Error:
